--- a/Nodejs/src/views/editCRUD.ejs
+++ b/Nodejs/src/views/editCRUD.ejs
@@ -21,26 +21,26 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
+    <div className="container">
+        <div className="row">
             <form action="/put-crud" method="POST">
-                <div class="form-row">
-                    <div class="col-12 mt-3"><b>Edit user's infomation:</b></div>
-                    <div class="form-group col-md-6">
+                <div className="form-row">
+                    <div className="col-12 mt-3"><b>Edit user's infomation:</b></div>
+                    <div className="form-group col-md-6">
                         <label for="inputEmail4">First name</label>
-                        <input type="text" class="form-control" placeholder="First Name" name="firsName" value="<%= user.firsName %>">
+                        <input type="text" className="form-control" placeholder="First Name" name="firsName" value="<%= user.firsName %>">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div className="form-group col-md-6">
                         <label for="inputPassword4">Last name</label>
-                        <input type="text" class="form-control" name="lastName" placeholder="Last Name" value="<%= user.lastName %>">
+                        <input type="text" className="form-control" name="lastName" placeholder="Last Name" value="<%= user.lastName %>">
                     </div>
                 </div>
-                <div class="form-group">
+                <div className="form-group">
                     <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" name="address" placeholder="1234 Main St" value="<%= user.address %>">
+                    <input type="text" className="form-control" name="address" placeholder="1234 Main St" value="<%= user.address %>">
                 </div>
                 <input name="id" value="<%=user.id%>" type="text" hidden/>
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit" className="btn btn-primary">Update</button>
             </form>
         </div>
     </div>
