--- a/ReactJS/src/containers/System/UserManage.scss
+++ b/ReactJS/src/containers/System/UserManage.scss
@@ -49,3 +49,36 @@
         color: rgb(236, 9, 9) !important;
     }
 }
+
+.modal-user-container {
+    .modal-content {
+        .modal-header {
+            button {
+                background-color: transparent !important;
+                border: none;
+                color: white;
+                font-size: 28px;
+            }
+        }
+    }
+    .modal-user-body {
+        display: flex;
+        gap: 15px;
+        flex-wrap: wrap;
+        .input-container {
+            display: flex;
+            flex-direction: column;
+            width: 48%;
+            &.max-width-input {
+                width: 99.5%;
+            }
+            input {
+                border-radius: 3px;
+                height: 30px;
+                border: 1px solid grey;
+                outline: none;
+                padding: 0 10px;
+            }
+        }
+    }
+}
