--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -1,9 +1,9 @@
 .slick-prev {
-    left: -10px !important;
-    z-index: 900 !important;
+    left: -20px !important;
+    z-index: 1000 !important;
     height: 48px !important;
     width: 44px !important;
-    background: #fff;
+    background: #fff !important;
     border: 2px solid #d7d7d7 !important;
     &:hover {
         background: #eceaea !important;
@@ -18,10 +18,10 @@
 
 .slick-next {
     right: -4px !important;
-    z-index: 900 !important;
+    z-index: 1000 !important;
     height: 48px !important;
     width: 44px !important;
-    background: #fff;
+    background: #fff !important;
     border: 2px solid #d7d7d7 !important;
     &:hover {
         background: #eceaea !important;
@@ -34,6 +34,11 @@
     }
     &.section-outstanding-doctor {
         background: #f5f5f5;
+    }
+    &.section-about {
+        height: 500px !important;
+        border-top: 1px solid #f5f5f5;
+        border-bottom: 1px solid #f5f5f5;
     }
     .section-body {
         .section-customize {
@@ -67,7 +72,7 @@
 .section-share {
     height: 330px;
     .section-container {
-        margin: 0 190px;
+        margin: 0 180px;
         display: flex;
         flex-direction: column;
         .section-header {
@@ -104,10 +109,43 @@
         margin-bottom: 10px;
     }
     .section-customize {
-        padding: 5px;
+        padding: 8px;
         .customize-border {
             border: 1px solid orange;
             padding: 20px;
+        }
+    }
+}
+
+.home-footer {
+    text-align: center;
+    padding-top: 8px;
+    a {
+        text-decoration: none;
+    }
+}
+
+.section-about {
+    padding: 0 100px;
+    .section-about-header {
+        padding: 20px 10px;
+        font-size: 22px;
+        font-weight: 600;
+    }
+    .section-about-content {
+        display: flex;
+        gap: 15px;
+        width: 100%;
+        .content-left {
+            width: 60%;
+        }
+        .content-right {
+            width: 40%;
+            p {
+                text-align: justify;
+                font-style: italic;
+                padding-top: 15px;
+            }
         }
     }
 }
