--- a/ReactJS/src/containers/Header/Header.scss
+++ b/ReactJS/src/containers/Header/Header.scss
@@ -1,5 +1,4 @@
 @import "../../styles/common.scss";
-
 .header-container {
     z-index: 99;
     display: flex;
@@ -18,6 +17,24 @@
         }
         i {
             font-size: $base-size + 1px;
+        }
+    }
+    .languages {
+        .language-en {
+            margin-left: 10px;
+            margin-right: 15px;
+            cursor: pointer;
+            &.active {
+                opacity: 1;
+                color: #30d663;
+            }
+        }
+        .language-vi {
+            cursor: pointer;
+            &.active {
+                opacity: 1;
+                color: orange;
+            }
         }
     }
 }
