menu phan quyen

--- a/ReactJS/src/components/Navigator.scss
+++ b/ReactJS/src/components/Navigator.scss
@@ -1,5 +1,4 @@
 @import "../styles/common.scss";
-
 .navigator-menu {
     display: flex;
     margin: 0;
@@ -35,6 +34,12 @@
                 height: 35px;
                 line-height: 35px;
                 text-transform: none;
+                &.active {
+                    a {
+                        color: red !important;
+                    }
+                    background-color:#ededed;
+                }
                 .menu-link {
                     text-decoration: none;
                     color: $text-in-light;
@@ -71,7 +76,7 @@
                 }
                 &.active span {
                     font-weight: 500;
-                    color: $colormain;
+                    color: red;
                 }
                 &:hover {
                     background-color: darken($bg-menu-color, 3);
