--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -56,7 +56,7 @@
                     background-image: url('../../assets/medical-facitily/bv-viet-duc.jpg')
                 }
                 &.section-outstanding-docter {
-                    background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
+                    // background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
                     width: 120px;
                     height: 120px;
                     border-radius: 50%;
