tao giao dien trang xem thong tin bac si

--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -46,6 +46,8 @@
     }
     .section-body {
         .section-customize {
+            padding: 5px;
+            cursor: pointer;
             .bg-image {
                 width: 278px;
                 height: 150px;
