--- a/ReactJS/src/containers/Patient/Doctor/DetaiDoctor.scss
+++ b/ReactJS/src/containers/Patient/Doctor/DetaiDoctor.scss
@@ -1,10 +1,8 @@
 .doctor-detail-container {
     height: 500px;
-    border: 1px solid red;
-    margin: 0 100px;
     .intro-doctor {
         display: flex;
-        border: 1px solid grey;
+        margin: 0 100px;
         .content-left {
             width: 20%;
             background: center center no-repeat;
@@ -27,5 +25,20 @@
                 padding-top: 10px;
             }
         }
+    }
+    .detail-infor-doctor {
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        background-color: #f9f9f9;
+        padding: 10px 100px;
+        h3 {
+            font-size: 17px;
+        }
+        img {
+            width: 100%;
+        }
+    }
+    .comment-doctor {
+        height: 50px;
     }
 }
