--- a/ReactJS/src/containers/System/Admin/ManageDoctor.scss
+++ b/ReactJS/src/containers/System/Admin/ManageDoctor.scss
@@ -20,6 +20,20 @@
             opacity: 0.8;
         }
     }
+    .create-content-doctor {
+        margin-top: 20px;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        outline: none;
+        border: none;
+        padding: 5px;
+        color: white;
+        background-color: rgb(21, 0, 255);
+        cursor: pointer;
+        &:hover {
+            opacity: 0.8;
+        }
+    }
     .more-infor {
         display: flex;
         gap: 15px;
