--- a/ReactJS/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/ReactJS/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,22 @@
 .doctor-schedule-container {
     border: 1px solid red;
-    .all-schedule {}
+    height: 100%;
+    .all-schedule {
+        select {
+            border-bottom: 1px solid #ddd;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            outline: none;
+            cursor: pointer;
+            padding: 10px 0;
+            color: #337ab7;
+            font-weight: 600;
+            option {
+                cursor: pointer;
+            }
+        }
+    }
     .all-available-time {
         .text-calendar {
             margin: 10px 0;
@@ -11,14 +27,36 @@
             }
         }
         .time-content {
-            display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
-            button {
-                padding: 5px 10px;
-                border: none;
-                outline: none;
-                background-color: grey;
+            .time-content-btns {
+                display: flex;
+                gap: 15px;
+                flex-wrap: wrap;
+                button {
+                    padding: 5px 10px;
+                    border: none;
+                    outline: none;
+                    background-color: red;
+                    color: white;
+                    border-radius: 3px;
+                    font-weight: 600;
+                    &:hover {
+                        background-color: #45c3d2;
+                        color: white;
+                    }
+                }
+                .btn-vie {
+                    min-width: 120px;
+                }
+                .btn-en {
+                    min-width: 170px;
+                }
+                .no-schedule {
+                    font-style: italic;
+                    font-size: 14px;
+                }
+            }
+            .book-free {
+                margin-top: 10px;
             }
         }
     }
