--- a/ReactJS/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/ReactJS/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -2,7 +2,9 @@
     .intro-doctor {
         display: flex;
         .content-left {
-            background: center center no-repeat;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             width: 100px;
             height: 100px;
             border-radius: 50%;
