--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -56,7 +56,7 @@
                 background-size: cover;
                 background-color: #eee;
                 &.section-specialty {
-                    background-image: url('../../assets/specialty/co-xuong-khop.jpg');
+                    // background-image: url('../../assets/specialty/co-xuong-khop.jpg');
                 }
                 &.section-medical-facility {
                     background-image: url('../../assets/medical-facitily/bv-viet-duc.jpg')
