--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -59,7 +59,7 @@
                     // background-image: url('../../assets/specialty/co-xuong-khop.jpg');
                 }
                 &.section-medical-facility {
-                    background-image: url('../../assets/medical-facitily/bv-viet-duc.jpg')
+                    // background-image: url('../../assets/medical-facitily/bv-viet-duc.jpg')
                 }
                 &.section-outstanding-docter {
                     // background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
