--- a/ReactJS/src/containers/HomePage/HomeHeader.scss
+++ b/ReactJS/src/containers/HomePage/HomeHeader.scss
@@ -4,8 +4,9 @@
     padding: 0 40px;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: #0e182f;
     z-index: 100;
+    color: #b2c0df;
     .home-header-content {
         width: 100%;
         height: 100%;
@@ -72,7 +73,7 @@
                 opacity: 0.5;
                 &.active {
                     span {
-                        color: blue;
+                        color: red;
                     }
                 }
                 &:hover {
