--- a/ReactJS/src/containers/HomePage/HomeHeader.scss
+++ b/ReactJS/src/containers/HomePage/HomeHeader.scss
@@ -5,7 +5,7 @@
     position: sticky;
     top: 0;
     background-color: #0e182f;
-    z-index: 100;
+    z-index: 1000;
     color: #b2c0df;
     .home-header-content {
         width: 100%;
@@ -50,9 +50,13 @@
                 display: flex;
                 align-items: center;
                 cursor: pointer;
+                opacity: 0.8;
                 i {
                     font-size: 15px;
                     margin-right: 5px;
+                }
+                &:hover {
+                    opacity: 1;
                 }
             }
             .language-vi {
