--- a/ReactJS/src/containers/HomePage/HomePage.scss
+++ b/ReactJS/src/containers/HomePage/HomePage.scss
@@ -62,10 +62,11 @@
                     // background-image: url('../../assets/medical-facitily/bv-viet-duc.jpg')
                 }
                 &.section-outstanding-docter {
-                    // background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bs.jpg');
+                    background-image: url('../../assets/outstanding-doctor/doctor.jpg');
                     width: 120px;
                     height: 120px;
                     border-radius: 50%;
+                    box-shadow: none;
                 }
                 &.section-handbook {
                     background-image: url('../../assets/images/cam-nang.jpg');
