--- a/ReactJS/src/containers/Patient/Doctor/DetaiDoctor.scss
+++ b/ReactJS/src/containers/Patient/Doctor/DetaiDoctor.scss
@@ -12,6 +12,7 @@
             height: 120px;
             border-radius: 50%;
             margin: 10px 20px;
+            background-image: url('../../../assets/outstanding-doctor/doctor.jpg');
         }
         .content-right {
             width: 80%;
