--- a/ReactJS/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/ReactJS/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -8,6 +8,7 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
+            background-image: url('../../../assets/outstanding-doctor/doctor.jpg');
         }
         .content-right {
             width: calc(100% - 100px);
